# hyprcurl

./: Cargo.toml  README.md
benchmarks/: python_vs_rust_bench.py
book/src/getting-started/: basic-usage.md  installation.md  quick-start.md
book/src/guide/: browser-impersonation.md  ssl-tls.md
examples/: browser_impersonation.rs  comprehensive.rs  post_request.rs  proxy_usage.rs  simple_get.rs
src/: curl.rs  lib.rs  python.rs
tests/: integration_tests.rs  request_builder_tests.rs  unit_tests.rs
